# c2s-desafio-tecnico

./: .env.template  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  config.py  main.py  server.py
app/connectors/database/: mcp.py  postgresql.py
app/controllers/: brand.py  brands.py  vehicles.py
app/models/: brand.py  color.py  fuel_type.py  status.py  vehicle.py
app/routers/: brands.py  vehicles.py
app/schemas/: brands.py  vehicles.py
app/utils/: enviroment.py  logger.py  postgresql.py  schemas.py
content/: fuel_types.json
scripts/: __init__.py  create_tables.py  drop_tables.py  populate_tables.py
scripts/json/: colors.json  status.json
tests/: conftest.py
tests/utils/: test_enviroment.py
