[project]
name = "c2s-desafio-tecnico"
version = "0.1.0"
description = "Desafio técnico para a vaga de Desenvolvedor Python Sênior na empresa C2S - Contact 2 Sale"
authors = [
    {name = "Lucas Kaminski",email = "lucas.kssilveira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "openai (>=1.76.2,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
